# WP10-Cluster5-ProdcomProductsClassification

./: .gitignore  pyproject.toml
.github/workflows/: build_website.yml
ClassifAI/: .gitignore  README.md  _1_list_page_products.py  _2_json_2_csv.py  _3_qdrant_populate_prodcom.py  _4_create_and_save_qdrant_collection_snapshot.py  _5_restore_qdrant_collection_from_snapshot.py  _7_classifai.py  classif_openai.py  classif_openai_no_descr.py  classif_qdrant_only.py  classif_qdrant_openai.py  classifai_cfg.ini  context.py  requirements.txt
ClassifAI/input/: prodcom_2023_classification.csv  url_containing_products.csv
ClassifAI/output/: prodotti_classificati_classifai_2026-05-08_14_10_55.csv  test_products_extracted_from_urls.csv
