[project]
name = "aiml4os-template-quarto-python"
version = "0.1.0"
description = "ClassifAI product classification scripts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "great-tables>=0.17.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.3",
    "polars>=1.30.0",
    "openai==2.36.0",
    "pillow==12.2.0",
    "python-dotenv==1.2.1",
    "qdrant-client==1.16.1",
    "requests==2.32.5",
    "openpyxl>=3.1.0",
]
